--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@hookform/resolvers": "^5.2.1",
+    "@mui/icons-material": "^7.3.1",
     "@mui/material": "^7.3.1",
+    "@mui/system": "^7.3.1",
     "@supabase/supabase-js": "^2.56.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
